tests/NormalTests/paczka1/small_fuzzy/52711308.err
Error in line 1: u195wR13Z S13 61,3
Error in line 3: iXoYObs S776 35,1
Error in line 5: iXoYObs A533 83,2
Error in line 14: iXoYObs S13 70,1
